Corrected alignment of document titles

--- a/static/menu.css
+++ b/static/menu.css
@@ -229,5 +229,6 @@ html {
 }
 
 .menu-index .act {
-	margin-left: 32px;
+	padding-top: 2px;
+	margin-left: 34px;
 }
